--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -6,6 +6,8 @@ on:
       - main
     paths-ignore:
       - 'oci/gitfence/**'
+  workflow_dispatch:
+
 jobs:
   lint-test:
     runs-on: ubuntu-latest
