--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -41,60 +41,84 @@ jobs:
             echo "IMAGES=${{ matrix.image.name }},ghcr.io/${{ matrix.image.name }}" >> $GITHUB_ENV
           fi
 
-      - name: Docker Metadata
-        id: meta
-        uses: docker/metadata-action@v3.4.1
-        with:
-          images: env.IMAGES
-          tags: |
-            type=schedule,pattern={{date 'YYYYMMDD'}}
-            type=semver,pattern={{version}}
-            type=sha
+      - name: Test IMAGES (bash)
+        run: echo "Bash version= $IMAGES"
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1.2.0
+      - name: Set env ghcr.io tagged images
+        if: ${{ matrix.image.publish-on-ghcr && !matrix.image.publish-on-dockerhub }}
+        run: echo "IMAGES1=$(echo $IMAGE_NAME)" >> $GITHUB_ENV
+        env:
+          IMAGE_NAME: ghcr.io/${{ matrix.image.name }}
 
-      - name: Set up Docker BuildX
-        uses: docker/setup-buildx-action@v1.5.1
+      - name: Set env docker.io tagged images
+        if: ${{ !matrix.image.publish-on-ghcr && matrix.image.publish-on-dockerhub }}
+        run: echo "IMAGES1=$(echo $IMAGE_NAME)" >> $GITHUB_ENV
+        env:
+          IMAGE_NAME: ${{ matrix.image.name }}
 
-      - name: Login to GitHub Container Registry
-        if: ${{ matrix.image.publish-on-ghcr }}
-        uses: docker/login-action@v1.10.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          logout: true
+      - name: Set env ghcr.io and docker.io tagged images
+        if: ${{ matrix.image.publish-on-ghcr && matrix.image.publish-on-dockerhub }}
+        run: echo "IMAGES1=$(echo $IMAGE_NAME)" >> $GITHUB_ENV
+        env:
+          IMAGE_NAME: ${{ matrix.image.name }},ghcr.io/${{ matrix.image.name }}
 
-      - name: Login to DockerHub
-        if: ${{ matrix.image.publish-on-dockerhub }}
-        uses: docker/login-action@v1.10.0
-        with:
-          registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          logout: true
+      - name: Test IMAGES (actions)
+        run: echo "Actions version= $IMAGES1"
 
-      - name: Build and push
-        uses: docker/build-push-action@v2.6.1
-        with:
-          context: ${{ matrix.image.path }}
-          platforms: ${{ matrix.image.platforms }}
-          tags: ${{ steps.meta.outputs.tags }}
-          build-args: |
-            VERSION=${{ steps.meta.outputs.version }}
-            LICENSE=${{ github.event.repository.license.spdx_id }}
-            VCS_URL=${{ github.event.repository.html_url }}
-            VCS_REF=${GITHUB_SHA::8}
-            BUILD_DATE=${{ steps.date.outputs.date }}
-          push: true
+      # - name: Docker Metadata
+      #   id: meta
+      #   uses: docker/metadata-action@v3.4.1
+      #   with:
+      #     images: env.IMAGES
+      #     tags: |
+      #       type=schedule,pattern={{date 'YYYYMMDD'}}
+      #       type=semver,pattern={{version}}
+      #       type=sha
 
-      - name: Update repo description
-        if: ${{ matrix.image.publish-on-dockerhub }}
-        uses: peter-evans/dockerhub-description@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: ${{ matrix.image.name }}
-          short-description: 'An OCI image, for creating and managing GPG and Age keys'
-          readme-filepath: ./oci/gitfence/IMAGE.md
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1.2.0
+
+      # - name: Set up Docker BuildX
+      #   uses: docker/setup-buildx-action@v1.5.1
+
+      # - name: Login to GitHub Container Registry
+      #   if: ${{ matrix.image.publish-on-ghcr }}
+      #   uses: docker/login-action@v1.10.0
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.repository_owner }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      #     logout: true
+
+      # - name: Login to DockerHub
+      #   if: ${{ matrix.image.publish-on-dockerhub }}
+      #   uses: docker/login-action@v1.10.0
+      #   with:
+      #     registry: docker.io
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      #     logout: true
+
+      # - name: Build and push
+      #   uses: docker/build-push-action@v2.6.1
+      #   with:
+      #     context: ${{ matrix.image.path }}
+      #     platforms: ${{ matrix.image.platforms }}
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     build-args: |
+      #       VERSION=${{ steps.meta.outputs.version }}
+      #       LICENSE=${{ github.event.repository.license.spdx_id }}
+      #       VCS_URL=${{ github.event.repository.html_url }}
+      #       VCS_REF=${GITHUB_SHA::8}
+      #       BUILD_DATE=${{ steps.date.outputs.date }}
+      #     push: true
+
+      # - name: Update repo description
+      #   if: ${{ matrix.image.publish-on-dockerhub }}
+      #   uses: peter-evans/dockerhub-description@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      #     repository: ${{ matrix.image.name }}
+      #     short-description: 'An OCI image, for creating and managing GPG and Age keys'
+      #     readme-filepath: ./oci/gitfence/IMAGE.md
