--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -21,7 +21,7 @@ jobs:
           - name: masoudbahar/gitfence
             path: oci/gitfence
             platforms: linux/amd64,linux/386,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-            publish-on-ghcr: false
+            publish-on-ghcr: true
             publish-on-dockerhub: true
     steps:
       - name: Checkout
