--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         image:
           - name: masoudbahar/gitfence
-            path: oci/gitfence
+            context: oci/gitfence
             platforms: linux/amd64,linux/386,linux/arm/v6,linux/arm/v7,linux/arm64/v8
             publish-on-ghcr: true
             publish-on-dockerhub: true
@@ -31,7 +31,7 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
 
-      - name: Tagged Images
+      - name: Set Target OCI Registry
         run: |
           if ${{ matrix.image.publish-on-ghcr }} && ! ${{ matrix.image.publish-on-dockerhub }}; then
             echo "IMAGES=ghcr.io/${{ matrix.image.name }}" >> $GITHUB_ENV
@@ -41,84 +41,60 @@ jobs:
             echo "IMAGES=${{ matrix.image.name }},ghcr.io/${{ matrix.image.name }}" >> $GITHUB_ENV
           fi
 
-      - name: Test IMAGES (bash)
-        run: echo "Bash version= $IMAGES"
+      - name: Docker Metadata
+        id: meta
+        uses: docker/metadata-action@v3.4.1
+        with:
+          images: env.IMAGES
+          tags: |
+            type=schedule,pattern={{date 'YYYYMMDD'}}
+            type=semver,pattern={{version}}
+            type=sha
 
-      - name: Set env ghcr.io tagged images
-        if: ${{ matrix.image.publish-on-ghcr && !matrix.image.publish-on-dockerhub }}
-        run: echo "IMAGES1=$(echo $IMAGE_NAME)" >> $GITHUB_ENV
-        env:
-          IMAGE_NAME: ghcr.io/${{ matrix.image.name }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
 
-      - name: Set env docker.io tagged images
-        if: ${{ !matrix.image.publish-on-ghcr && matrix.image.publish-on-dockerhub }}
-        run: echo "IMAGES1=$(echo $IMAGE_NAME)" >> $GITHUB_ENV
-        env:
-          IMAGE_NAME: ${{ matrix.image.name }}
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v1.5.1
 
-      - name: Set env ghcr.io and docker.io tagged images
-        if: ${{ matrix.image.publish-on-ghcr && matrix.image.publish-on-dockerhub }}
-        run: echo "IMAGES1=$IMAGE_NAME" >> $GITHUB_ENV
-        env:
-          IMAGE_NAME: ${{ matrix.image.name }},ghcr.io/${{ matrix.image.name }}
+      - name: Login to GitHub Container Registry
+        if: ${{ matrix.image.publish-on-ghcr }}
+        uses: docker/login-action@v1.10.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          logout: true
 
-      - name: Test IMAGES (actions)
-        run: echo "Actions version= $IMAGES1"
+      - name: Login to DockerHub
+        if: ${{ matrix.image.publish-on-dockerhub }}
+        uses: docker/login-action@v1.10.0
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          logout: true
 
-      # - name: Docker Metadata
-      #   id: meta
-      #   uses: docker/metadata-action@v3.4.1
-      #   with:
-      #     images: env.IMAGES
-      #     tags: |
-      #       type=schedule,pattern={{date 'YYYYMMDD'}}
-      #       type=semver,pattern={{version}}
-      #       type=sha
+      - name: Build and push
+        uses: docker/build-push-action@v2.6.1
+        with:
+          context: ${{ matrix.image.path }}
+          platforms: ${{ matrix.image.platforms }}
+          tags: ${{ steps.meta.outputs.tags }}
+          build-args: |
+            VERSION=${{ steps.meta.outputs.version }}
+            LICENSE=${{ github.event.repository.license.spdx_id }}
+            VCS_URL=${{ github.event.repository.html_url }}
+            VCS_REF=${GITHUB_SHA::8}
+            BUILD_DATE=${{ steps.date.outputs.date }}
+          push: true
 
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1.2.0
-
-      # - name: Set up Docker BuildX
-      #   uses: docker/setup-buildx-action@v1.5.1
-
-      # - name: Login to GitHub Container Registry
-      #   if: ${{ matrix.image.publish-on-ghcr }}
-      #   uses: docker/login-action@v1.10.0
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.repository_owner }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
-      #     logout: true
-
-      # - name: Login to DockerHub
-      #   if: ${{ matrix.image.publish-on-dockerhub }}
-      #   uses: docker/login-action@v1.10.0
-      #   with:
-      #     registry: docker.io
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      #     logout: true
-
-      # - name: Build and push
-      #   uses: docker/build-push-action@v2.6.1
-      #   with:
-      #     context: ${{ matrix.image.path }}
-      #     platforms: ${{ matrix.image.platforms }}
-      #     tags: ${{ steps.meta.outputs.tags }}
-      #     build-args: |
-      #       VERSION=${{ steps.meta.outputs.version }}
-      #       LICENSE=${{ github.event.repository.license.spdx_id }}
-      #       VCS_URL=${{ github.event.repository.html_url }}
-      #       VCS_REF=${GITHUB_SHA::8}
-      #       BUILD_DATE=${{ steps.date.outputs.date }}
-      #     push: true
-
-      # - name: Update repo description
-      #   if: ${{ matrix.image.publish-on-dockerhub }}
-      #   uses: peter-evans/dockerhub-description@v2
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      #     repository: ${{ matrix.image.name }}
-      #     short-description: 'An OCI image, for creating and managing GPG and Age keys'
-      #     readme-filepath: ./oci/gitfence/IMAGE.md
+      - name: Update repo description
+        if: ${{ matrix.image.publish-on-dockerhub }}
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          repository: ${{ matrix.image.name }}
+          short-description: 'An OCI image, for creating and managing GPG and Age keys'
+          readme-filepath: ./oci/gitfence/IMAGE.md
