--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -22,7 +22,7 @@ jobs:
             context: oci/gitfence
             platforms: linux/amd64,linux/386,linux/arm/v6,linux/arm/v7,linux/arm64/v8
             publish-on-ghcr: true
-            publish-on-dockerhub: true
+            publish-on-dockerhub: false
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
