--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -45,7 +45,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3.4.1
         with:
-          images: env.IMAGES
+          images: ${{ env.IMAGES }}
           tags: |
             type=schedule,pattern={{date 'YYYYMMDD'}}
             type=semver,pattern={{version}}
