--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -27,18 +27,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.4
 
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+      - name: Set Date and Image Version
+        id: custom
+        run: |
+          echo "::set-output name=date::$(date -u +'%Y-%m-%d %H:%M:%S')"
+          echo "::set-output name=version::$(date -u +'%Y%m%d.%H%M%S')"
 
       - name: Set Target OCI Registry
         run: |
           if ${{ matrix.image.publish-on-ghcr }} && ! ${{ matrix.image.publish-on-dockerhub }}; then
-            echo "IMAGES=ghcr.io/${{ matrix.image.name }}" >> $GITHUB_ENV
+            echo "::set-env name=IMAGES::ghcr.io/${{ matrix.image.name }}"
           elif ! ${{ matrix.image.publish-on-ghcr }} && ${{ matrix.image.publish-on-dockerhub }}; then
-            echo "IMAGES=${{ matrix.image.name }}" >> $GITHUB_ENV
+            echo "::set-env name=IMAGES::${{ matrix.image.name }}"
           elif ${{ matrix.image.publish-on-ghcr }} && ${{ matrix.image.publish-on-dockerhub }}; then
-            echo "IMAGES=${{ matrix.image.name }},ghcr.io/${{ matrix.image.name }}" >> $GITHUB_ENV
+            echo "::set-env name=IMAGES::${{ matrix.image.name }},ghcr.io/${{ matrix.image.name }}"
           fi
 
       - name: Docker Metadata
@@ -46,10 +48,11 @@ jobs:
         uses: docker/metadata-action@v3.4.1
         with:
           images: ${{ env.IMAGES }}
+          flavor: |
+            latest=true
           tags: |
-            type=schedule,pattern={{date 'YYYYMMDD'}}
-            type=semver,pattern={{version}}
-            type=sha
+            type=raw,enable=true,prefix=v,suffix=,value=${{ steps.custom.outputs.version }}
+            type=sha,enable=true,prefix=,suffix=,format=short
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1.2.0
@@ -75,21 +78,21 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           logout: true
 
-      - name: Build and push
+      - name: Build and Push
         uses: docker/build-push-action@v2.6.1
         with:
           context: ${{ matrix.image.context }}
           platforms: ${{ matrix.image.platforms }}
           tags: ${{ steps.meta.outputs.tags }}
           build-args: |
-            VERSION=${{ steps.meta.outputs.version }}
+            VERSION=${{ steps.custom.outputs.version }}
             LICENSE=${{ github.event.repository.license.spdx_id }}
             VCS_URL=${{ github.event.repository.html_url }}
-            VCS_REF=${GITHUB_SHA::8}
-            BUILD_DATE=${{ steps.date.outputs.date }}
+            VCS_REF=${{ env.GITHUB_SHA::8 }}
+            BUILD_DATE=${{ steps.custom.outputs.date }}
           push: true
 
-      - name: Update repo description
+      - name: Update DockerHub Repository Description
         if: ${{ matrix.image.publish-on-dockerhub }}
         uses: peter-evans/dockerhub-description@v2
         with:
@@ -97,4 +100,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: ${{ matrix.image.name }}
           short-description: 'An OCI image, for creating and managing GPG and Age keys'
-          readme-filepath: ./oci/gitfence/IMAGE.md
+          readme-filepath: ./oci/gitfence/README.md
