--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -43,14 +43,16 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --chart-dirs "./"
+        run: |
+          ls -lha
+          ct lint --chart-dirs ./
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
         if: steps.list-changed.outputs.changed == 'true'
 
       - name: Run chart-testing (install)
-        run: ct install --chart-dirs "./"
+        run: ct install --chart-dirs ./
 
   release:
     needs: lint-test
