--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -43,14 +43,14 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --target-branch main --all # --chart-dirs ./
+        run: ct lint --target-branch main --all --chart-dirs ./
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
         if: steps.list-changed.outputs.changed == 'true'
 
       - name: Run chart-testing (install)
-        run: ct install --target-branch main --all # --chart-dirs ./
+        run: ct install --target-branch main --all --chart-dirs ./
 
   release:
     needs: lint-test
