--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -49,9 +49,10 @@ jobs:
         env:
           CT_TARGET_BRANCH: main
           CT_CHART_DIRS: "./"
+          CT_CHARTS: gitfence
           CT_CHART_YAML_SCHEMA: "templates/ct-lint/--chart_schema.yaml"
           CT_LINT_CONF: "templates/ct-lint/lintconf.yaml"
-        run: ct lint --all
+        run: ct lint
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
@@ -61,8 +62,9 @@ jobs:
         env:
           CT_TARGET_BRANCH: main
           CT_CHART_DIRS: "./"
+          CT_CHARTS: gitfence
           CT_NAMESPACE: flux-system
-        run: ct install --all
+        run: ct install
 
   release:
     needs: lint-test
