--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           CT_TARGET_BRANCH: main
           CT_CHART_DIRS: "./"
-          CT_CHARTS: gitfence
+          CT_CHARTS: ./
           CT_CHART_YAML_SCHEMA: "templates/ct-lint/--chart_schema.yaml"
           CT_LINT_CONF: "templates/ct-lint/lintconf.yaml"
         run: ct lint
@@ -62,7 +62,7 @@ jobs:
         env:
           CT_TARGET_BRANCH: main
           CT_CHART_DIRS: "./"
-          CT_CHARTS: gitfence
+          CT_CHARTS: ./
           CT_NAMESPACE: flux-system
         run: ct install
 
