--- a/.helmignore
+++ b/.helmignore
@@ -2,7 +2,7 @@
 # This supports shell glob matching, relative path matching, and
 # negation (prefixed with !). Only one pattern per line.
 .DS_Store
-templates/ct-lint/*.yaml
+templates/ct-lint/*
 # Common VCS dirs
 .git/
 .gitignore
