--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -41,7 +41,7 @@ jobs:
           CT_CHART_DIRS: "./"
         run: |
           changed=$(ct list-changed)
-          if [[ -n "$changed" ]]; then
+          if [[ ! -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
 
@@ -56,7 +56,7 @@ jobs:
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
-        if: steps.list-changed.outputs.changed == 'true'
+        if: ${{ steps.list-changed.outputs.changed == 'true' }}
 
       - name: Run chart-testing (install)
         env:
