Updated Helm workflow

--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run chart-testing (lint)
         env:
           CT_TARGET_BRANCH: main
-          #CT_CHART_DIRS: "./"
+          CT_CHART_DIRS: "./"
           CT_CHARTS: ./
           CT_CHART_YAML_SCHEMA: "templates/ct-lint/chart_schema.yaml"
           CT_LINT_CONF: "templates/ct-lint/lintconf.yaml"
@@ -61,7 +61,7 @@ jobs:
       - name: Run chart-testing (install)
         env:
           CT_TARGET_BRANCH: main
-          #CT_CHART_DIRS: "./"
+          CT_CHART_DIRS: "./"
           CT_CHARTS: ./
           CT_NAMESPACE: flux-system
         run: ct install
