--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -56,9 +56,10 @@ jobs:
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
-        if: ${{ steps.list-changed.outputs.changed == 'true' }}
+        if: ${{ steps.list-changed.outputs.changed != 'true' }}
 
       - name: Run chart-testing (install)
+        if: ${{ steps.list-changed.outputs.changed != 'true' }}
         env:
           CT_TARGET_BRANCH: main
           CT_CHART_DIRS: "./"
