--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -15,7 +15,10 @@ on:
 
 jobs:
   lint-test:
+    name: Lint and Test gitfence Helm Chart
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -25,14 +28,14 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v1
         with:
-          version: v3.4.0
+          version: v3
 
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: 3.9
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.1.0
+        uses: helm/chart-testing-action@v2
 
       - name: Run chart-testing (list-changed)
         id: list-changed
@@ -55,7 +58,7 @@ jobs:
         run: ct lint
 
       - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
+        uses: helm/kind-action@v1
         if: ${{ steps.list-changed.outputs.changed != 'true' }}
 
       - name: Run chart-testing (install)
@@ -69,8 +72,11 @@ jobs:
         run: ct install
 
   release:
+    name: Release gitfence Helm Chart
     needs: lint-test
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     if: ${{ github.event_name != 'pull_request' }}
     steps:
       - name: Checkout
@@ -90,11 +96,19 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
-          version: v3.4.0
+          version: v3
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.2.1
+        uses: helm/chart-releaser-action@v1
         env:
+          CR_OWNER: "$GITHUB_ACTOR"
+          CR_CHARTS_REPO: "$GITHUB_REPOSITORY"
+          CR_GIT_REPO: gitfence
+          #CR_PACKAGE_PATH: ".cr-release-packages"
+          #CR_INDEX_PATH: ".cr-index/index.yaml"
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          #CR_GIT_BASE_URL: "$GITHUB_API_URL"
+          #CR_GIT_UPLOAD_URL: "https://uploads.github.com/"
+          CR_SKIP_EXISTING: true
         with:
           charts_dir: "./"
