--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -29,9 +29,10 @@ jobs:
             platforms: linux/amd64,linux/386,linux/arm/v6,linux/arm/v7,linux/arm64/v8
             publish-on-ghcr: true
             publish-on-dockerhub: false
+            sign-with-cosign: false
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2
 
       - name: Set Custom Variables
         id: custom
@@ -52,7 +53,7 @@ jobs:
 
       - name: Docker Metadata
         id: meta
-        uses: docker/metadata-action@v3.4.1
+        uses: docker/metadata-action@v3
         with:
           images: ${{ env.IMAGES }}
           flavor: |
@@ -62,14 +63,14 @@ jobs:
             type=sha,enable=true,prefix=,suffix=,format=short
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1.2.0
+        uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker BuildX
-        uses: docker/setup-buildx-action@v1.5.1
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to GitHub Container Registry
         if: ${{ matrix.image.publish-on-ghcr }}
-        uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -78,7 +79,7 @@ jobs:
 
       - name: Login to DockerHub
         if: ${{ matrix.image.publish-on-dockerhub }}
-        uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v1
         with:
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -86,7 +87,7 @@ jobs:
           logout: true
 
       - name: Build and Push
-        uses: docker/build-push-action@v2.6.1
+        uses: docker/build-push-action@v2
         with:
           context: ${{ matrix.image.context }}
           platforms: ${{ matrix.image.platforms }}
@@ -102,11 +103,11 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Install sigstore/cosign
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: sigstore/cosign-installer@main
+        if: ${{ matrix.image.sign-with-cosign && github.event_name != 'pull_request' }}
+        uses: sigstore/cosign-installer@v1
 
       - name: Sign the Image with sigstore/cosign
-        if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ matrix.image.sign-with-cosign && github.event_name != 'pull_request' }}
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSPHRASE }}
           COSIGN_EXPERIMENTAL: 0
