Enforce GitHub Actions version upgrade policy
Because:
- Non-critical GitHub Actions version upgrades could be ignored.
- GitHub's dependabot notification policy can be used for this.

Changes to be committed:
	modified:   .github/dependabot.yml
	modified:   .github/workflows/helm-release.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    labels:
+      - "dependencies"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
