Update GitFence chart and OCI image
This commit updates the GitFence chart and OCI image with the following
changes:
- Updated the username, throughout the repository
- Updated the appVersion and the kubeVersion in Chart.yaml
- Added SBOM to OCI image generation
- Added a package repository maintenance workflow
- Migrated from deprecated method of storing workflow variables

Signed-off-by: ossfellow <masoud@operatik.io>

--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -104,6 +104,7 @@ jobs:
           CR_OWNER: "$GITHUB_ACTOR"
           #CR_CHARTS_REPO: "$GITHUB_REPOSITORY"
           CR_CHARTS_REPO: "https://$GITHUB_ACTOR.github.io/gitfence"
+          # CR_CHARTS_REPO: "https://raw.githubusercontent.com/$GITHUB_ACTOR/gitfence/gh-pages/"
           CR_GIT_REPO: gitfence
           #CR_PACKAGE_PATH: ".cr-release-packages"
           #CR_INDEX_PATH: ".cr-index/index.yaml"
