--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -26,16 +26,16 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Helm
-        uses: azure/setup-helm@v1
+        uses: azure/setup-helm@v3
         with:
-          version: v3.7.0
+          version: v3.13.1
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.11
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.4.0
+        uses: helm/chart-testing-action@v2.6.0
 
       - name: Run chart-testing (list-changed)
         id: list-changed
@@ -45,7 +45,7 @@ jobs:
         run: |
           changed=$(ct list-changed)
           if [[ ! -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
+            echo "CHANGED=true" >> $GITHUB_ENV
           fi
 
       - name: Run chart-testing (lint)
@@ -59,10 +59,10 @@ jobs:
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.8.0
-        if: ${{ steps.list-changed.outputs.changed != 'true' }}
+        if: ${{ env.CHANGED != 'true' }}
 
       - name: Run chart-testing (install)
-        if: ${{ steps.list-changed.outputs.changed != 'true' }}
+        if: ${{ env.CHANGED != 'true' }}
         env:
           CT_TARGET_BRANCH: main
           CT_CHART_DIRS: "./"
