--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -1,56 +1,86 @@
-name: Release GitFence Helm Chart
+name: Test and Release sopSeed Helm Chart
 
 on:
   push:
-    branches:
-      - main
-    paths-ignore:
-      - 'oci/gitfence/**'
+    tags:
+      - 'sopseed-chart-v[0-9]+.[0-9]+.[0-9]+'
+  pull_request:
+    paths:
+      - './chart/**'
+      - '.github/workflows/helm-release.yml'
+  workflow_dispatch:
+
+permissions:
+  contents: read
+
+env:
+  HELM_VERSION: v3.13.3
+
 jobs:
   lint-test:
+    name: Lint and Test sopSeed Helm Chart
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up Helm
-        uses: azure/setup-helm@v1
+        uses: azure/setup-helm@v4
         with:
-          version: v3.4.0
+          version: ${{ env.HELM_VERSION }}
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.7
+          python-version: '3.12.0'
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.1.0
+        uses: helm/chart-testing-action@v2.6.0
+        with:
+          version: v3.9.0
+          yamllint_version: 1.32.0
+          yamale_version: 4.0.4
 
       - name: Run chart-testing (list-changed)
         id: list-changed
+        env:
+          CT_TARGET_BRANCH: main
+          CT_CHART_DIRS: "./chart"
         run: |
           changed=$(ct list-changed)
-          if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
+          if [[ ! -n "${changed}" ]]; then
+            echo "CHANGED=true" >> $GITHUB_ENV
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint
+        if: ${{ env.CHANGED == 'true' }}
+        run: |
+          ct lint --config chart/ct.yaml
 
       - name: Create kind cluster
-        uses: helm/kind-action@vv1.2.0
-        if: steps.list-changed.outputs.changed == 'true'
+        uses: helm/kind-action@v1.10.0
+        if: ${{ env.CHANGED == 'true' }}
 
       - name: Run chart-testing (install)
-        run: ct install
+        if: ${{ env.CHANGED == 'true' }}
+        run: |
+            ct install --config chart/ct.yaml
 
   release:
+    name: Release sopSeed Helm Chart
     needs: lint-test
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    if: ${{ github.event_name != 'pull_request' }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -59,18 +89,45 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@gmail.com"
 
-      - name: Check for gh-pages branch
-        run: |
-          git ls-remote --exit-code --heads origin gh-pages
-
       - name: Install Helm
-        uses: azure/setup-helm@v1
+        uses: azure/setup-helm@v4
         with:
-          version: v3.4.0
+          version: ${{ env.HELM_VERSION }}
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.2.1
+      - name: Package Helm Chart
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CHART_DIR: "./chart"
+        run: |
+          cd ${CHART_DIR}
+          helm dependency build
+          cd -
+          helm package ${CHART_DIR} -d .helm-charts
+
+      - name: Push Helm Chart to OCI Registry
+        env:
+          HELM_EXPERIMENTAL_OCI: 1
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io --username ${{ github.actor }} --password-stdin
+          helm push .helm-charts/sopSeed-${{ env.CHART_VERSION }}.tgz oci://ghcr.io/${{ github.repository_owner }}/sopSeed:${{ env.CHART_VERSION }}
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          charts_dir: ./
+          tag_name: v${{ env.CHART_VERSION }}
+          release_name: Release v${{ env.CHART_VERSION }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Helm Chart to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: .helm-charts/sopSeed-${{ env.CHART_VERSION }}.tgz
+          asset_name: sopSeed-${{ env.CHART_VERSION }}.tgz
+          asset_content_type: application/gzip
+
